--- a/yolo/cfgs/yolov2.yml
+++ b/yolo/cfgs/yolov2.yml
@@ -5,11 +5,11 @@ log_name: "logs"
 
 labels: ["aeroplane", "bicycle", "bird", "boat", "bottle", "bus", "car", "cat", "chair", "cow", "diningtable", "dog", "horse", "motorbike", "person", "pottedplant", "sheep", "sofa", "train", "tvmonitor"]
 
-data_root_dir: "/data2/yichaoxiong/data/VOCdevkit/onedet_cache"
+data_root_dir: "/mfs/home/fangyong/data/VOCdevkit/onedet_cache"
 
 train:
     dataset: "train"
-    stdout: False
+    stdout: True
     gpus: "2"
     nworkers: 16
     pin_mem: True
@@ -32,7 +32,7 @@ train:
     input_shape: [608, 608]
     batch_size: 64
     mini_batch_size: 16
-    weights: "weights/darknet19_448.conv.23"
+    weights: "/mfs/home/fangyong/yolo_weights/darknet19_448.conv.23"
 
 test:
     dataset: "test"
